Добавил проверку прав на отчет при расшаривании задания