@@ -8,10 +8,12 @@ import org.springframework.web.servlet.mvc.method.annotation.ResponseBodyEmitter
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
 import ru.magnit.magreportbackend.domain.filtertemplate.FilterFieldTypeEnum;
 import ru.magnit.magreportbackend.domain.filtertemplate.FilterTypeEnum;
+import ru.magnit.magreportbackend.domain.folderreport.FolderAuthorityEnum;
 import ru.magnit.magreportbackend.domain.reportjob.ReportJobStatusEnum;
 import ru.magnit.magreportbackend.domain.reportjob.ReportJobUserTypeEnum;
 import ru.magnit.magreportbackend.domain.user.SystemRoles;
 import ru.magnit.magreportbackend.dto.inner.RoleView;
+import ru.magnit.magreportbackend.dto.request.report.ReportIdRequest;
 import ru.magnit.magreportbackend.dto.request.reportjob.ExcelReportRequest;
 import ru.magnit.magreportbackend.dto.request.reportjob.ReportJobAddRequest;
 import ru.magnit.magreportbackend.dto.request.reportjob.ReportJobCommentRequest;
@@ -31,6 +33,7 @@ import ru.magnit.magreportbackend.dto.response.reportjob.ReportPageResponse;
 import ru.magnit.magreportbackend.dto.response.reportjob.ReportSqlQueryResponse;
 import ru.magnit.magreportbackend.dto.response.reportjob.ScheduledReportResponse;
 import ru.magnit.magreportbackend.dto.response.reportjob.TokenResponse;
+import ru.magnit.magreportbackend.dto.response.user.RoleResponse;
 import ru.magnit.magreportbackend.dto.response.user.UserResponse;
 import ru.magnit.magreportbackend.dto.tuple.Tuple;
 import ru.magnit.magreportbackend.dto.tuple.TupleValue;
@@ -52,6 +55,7 @@ import ru.magnit.magreportbackend.service.domain.TokenService;
 import ru.magnit.magreportbackend.service.domain.UserDomainService;
 
 import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -59,6 +63,7 @@ import java.util.stream.Collectors;
 
 import static ru.magnit.magreportbackend.domain.reportjob.ReportJobStatusEnum.PENDING_DB_CONNECTION;
 import static ru.magnit.magreportbackend.domain.reportjob.ReportJobStatusEnum.RUNNING;
+import static ru.magnit.magreportbackend.domain.user.SystemRoles.ADMIN;
 import static ru.magnit.magreportbackend.domain.user.SystemRoles.UNBOUNDED_JOB_ACCESS;
 
 @Slf4j
@@ -387,19 +392,50 @@ public class ReportJobService {
         return jobDomainService.getJobMetaData(request.getJobId());
     }
 
-    public void shareJob(ReportJobShareRequest request) {
+    public String shareJob(ReportJobShareRequest request) {
 
         var currentUser = userDomainService.getCurrentUser();
         var job = jobDomainService.getJob(request.getJobId());
+
+        var userWithoutPermissions = new ArrayList<UserResponse>();
+
+        var userRoleIds =
+                folderDomainService
+                        .getPublishedReports(new ReportIdRequest().setId(job.getReport().id()))
+                        .getFolders()
+                        .stream()
+                        .map(f -> folderPermissionsDomainService.getFolderReportPermissions(f.folder().id()))
+                        .flatMap(f -> f.rolePermissions().stream())
+                        .filter(r -> !r.permissions().contains(FolderAuthorityEnum.NONE))
+                        .map(r -> r.role().getId())
+                        .toList();
+
         if (job.getUser().name().equals(currentUser.getName())) {
-            var users = request.getUsers().stream().map(u -> userDomainService.getUserResponse(u.getUserName(), u.getDomain())).toList();
+            var users = request.getUsers().stream().map(u -> userDomainService.getUserResponse(u.getUserName(), u.getDomain())).collect(Collectors.toList());
+
+            users.forEach(u -> {
+                var roles = u.getRoles()
+                        .stream()
+                        .map(RoleResponse::getId)
+                        .filter(r ->  r.equals(ADMIN.getId()) || userRoleIds.contains(r))
+                        .toList();
+
+                if (roles.isEmpty()) userWithoutPermissions.add(u);
+            });
+
+            users.removeAll(userWithoutPermissions);
+
             reportJobUserDomainService.addUsersJob(ReportJobUserTypeEnum.SHARE, request.getJobId(), users);
             olapConfigurationDomainService.createCurrentConfigurationForUsers(users.stream().map(UserResponse::getId).toList(), request.getJobId(), currentUser.getId());
-        } else {
+        } else
             throw new InvalidParametersException("Only the author can share the task");
-        }
 
         jobDomainService.updateJobStats(request.getJobId(), false, false, true);
+
+        if (userWithoutPermissions.isEmpty())
+            return "Job share success";
+        else
+            return "Permission denied for users: " + userWithoutPermissions.stream().map(UserResponse::getName).collect(Collectors.joining(","));
 
     }
 
